# MQTT_WIFI

./: .gitignore  CMakeLists.txt
main/: CMakeLists.txt  ble_manager.c  keys_example.h  main.c  wifi_manager.c
main/BLE/: ble_manager.c
main/MQTT/: mqtt_manager.h
main/WIFI/: wifi_manager.c  wifi_manager.h
main/ble/: ble_manager.c
main/gpio/: gpio_manager.c  gpio_manager.h
main/mqtt/: mqtt_manager.c  mqtt_manager.h
main/wifi/: wifi_manager.c  wifi_manager.h
